--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,43 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Page Title</title>
-</head>
-<body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<head>
+    <link rel="stylesheet" href="global.css">
+    <title> Shadow
+    </title>
+</head>
+
+<body class="body">
+    <img src="image/UX.png">
+    <h1>Takeaways from Shadow Program</h1>
+    <h2>This is to demonstrate what I have learnt from Shadow Program.</h2>
+    <p>Throughtout the 10 weeks program in UX Engineering Team, I was able to learn the basics of JavaScript and CSS, as
+        well as the fundamental elements of design process. </p>
+    <br>
+    <br>
+    <br>
+    
+
+
+    <div class="sectionTitle">Design Process</div>
+    <div class="container">
+        <div class="box">Empathize</div>
+        <div class="box">Define</div>
+        <div class="box">Ideate</div>
+        <div class="box">Prototype</div>
+        <div class="box">Test</div>
+        <br>
+        <br>
+        <br>
+    </div>
+
+    <div class="sectionTitle">Coding</div>
+    <div class="container">
+        <div class="box">JavaScript</div>
+        <div class="box">HTML</div>
+        <div class="box">CSS</div>
+    </div>
 
 </body>
+
 </html>
