--- a/src/index.html
+++ b/src/index.html
@@ -3,21 +3,37 @@
 
 <head>
     <link rel="stylesheet" href="global.css">
-    <title> Shadow
-    </title>
+    <title>Shadow Program</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif; /* Example font family */
+            text-align: center; /* Center-align text content */
+        }
+
+        .container {
+            display: inline-block; /* Ensures the container wraps around its content */
+            text-align: left; /* Aligns content inside container to the left */
+        }
+
+        .box {
+            display: inline-block;
+            width: 100px; /* Example width */
+            height: 100px; /* Example height */
+            border: 1px solid black; /* Example border */
+            margin: 10px; /* Example margin */
+            text-align: center; /* Centers text inside the box */
+            line-height: 100px; /* Vertically centers text */
+        }
+    </style>
 </head>
 
-<body class="body">
+<body>
     <img src="image/UX.png">
     <h1>Takeaways from Shadow Program</h1>
-    <h2>This is to demonstrate what I have learnt from Shadow Program.</h2>
-    <p>Throughtout the 10 weeks program in UX Engineering Team, I was able to learn the basics of JavaScript and CSS, as
-        well as the fundamental elements of design process. </p>
-    <br>
-    <br>
-    <br>
-    
-
+    <h2>This is to demonstrate what I have learned from the Shadow Program.</h2>
+    <p>Throughout the 10-week program in the UX Engineering Team, I was able to learn the basics of JavaScript and CSS,
+        as well as the fundamental elements of the design process.</p>
+    <br><br><br>
 
     <div class="sectionTitle">Design Process</div>
     <div class="container">
@@ -26,9 +42,6 @@
         <div class="box">Ideate</div>
         <div class="box">Prototype</div>
         <div class="box">Test</div>
-        <br>
-        <br>
-        <br>
     </div>
 
     <div class="sectionTitle">Coding</div>
